Bug 22036 - libjava/jni.cc compilation fix in cvs 2005-06-12
Summary: libjava/jni.cc compilation fix in cvs 2005-06-12
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libgcj (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Tom Tromey
URL:
Keywords: build
Depends on:
Blocks:
 
Reported: 2005-06-12 15:08 UTC by Jim Huang
Modified: 2005-06-13 20:24 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-06-13 20:19:45


Attachments
compilation fix to libjava/jni.cc (513 bytes, patch)
2005-06-12 15:09 UTC, Jim Huang
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Huang 2005-06-12 15:08:08 UTC
I've cvs checked out gcc mainline (2005-06-12) to build gcj, and I found there
were some compilation errors about libjava/jni.cc . The attachment is my fix
against libjava/jni.cc .
Comment 1 Jim Huang 2005-06-12 15:09:41 UTC
Created attachment 9076 [details]
compilation fix to libjava/jni.cc
Comment 2 Andrew Pinski 2005-06-12 15:12:24 UTC
This compiles just fine for me.
Comment 3 Andrew Pinski 2005-06-13 14:19:38 UTC
This works for me when I build like the following:
${PATH_TO_TOPLEVELDIR}/configure --prefix=${HOME}/linux --enable-languages=java
make bootstrap
Comment 4 Tom Tromey 2005-06-13 17:16:58 UTC
This bug can occur when DEBUG is defined in the libgcj build.
I'll apply the patch shortly.
Comment 5 GCC Commits 2005-06-13 20:23:26 UTC
Subject: Bug 22036

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	tromey@gcc.gnu.org	2005-06-13 20:23:12

Modified files:
	libjava        : ChangeLog jni.cc 

Log message:
	2005-06-13  Jim Huang  <jserv@kaffe.org>
	
	PR libgcj/22036:
	* jni.cc (_Jv_JNI_NewObjectV): Use chars() method.
	(_Jv_JNI_NewObject): Likewise.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libjava/ChangeLog.diff?cvsroot=gcc&r1=1.3659&r2=1.3660
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libjava/jni.cc.diff?cvsroot=gcc&r1=1.98&r2=1.99

Comment 6 Tom Tromey 2005-06-13 20:24:00 UTC
I checked the fix in on the trunk.