re PR libgcj/22036 (libjava/jni.cc compilation fix in cvs 2005-06-12)

2005-06-13  Jim Huang  <jserv@kaffe.org>

	PR libgcj/22036:
	* jni.cc (_Jv_JNI_NewObjectV): Use chars() method.
	(_Jv_JNI_NewObject): Likewise.

From-SVN: r100897